examples/gatewayapi/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gwapitest
spec:
  selector:
    app: gwapitest
  ports:
    - port: 80
