examples/gatewayapi/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gwapitest
spec:
  parentRefs:
    - name: main
  hostnames:
    - "gwapitest.sikademo.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gwapitest
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
